add path handling

--- a/exploring.ipynb
+++ b/exploring.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,18 +12,30 @@
     "import multiprocessing\n",
     "\n",
     "PROCESSES = multiprocessing.cpu_count() - 2 # leave some cpus for other stuff to not kill the PC\n",
-    "PATH = \"/Users/szczekulskij/.objaverse/hf-objaverse-v1/glbs/\"\n",
+    "OBJAVERSE_PATH = \"/Users/szczekulskij/.objaverse/hf-objaverse-v1/glbs/\" # default path for where the objaverse objects are stored\n",
+    "IMAGE_PATH = '''/Users/szczekulskij/masters-work/spring '24/CSE-252D/2d-images/''' # default path for where the objaverse images are stored\n",
     "\n",
-    "def get_ids_of_already_downloaded_objects(path = PATH):\n",
+    "# if IMAGE_PATH or OBJAVERSE_PATH is not found, it will be created\n",
+    "if not os.path.exists(IMAGE_PATH): os.makedirs(IMAGE_PATH)\n",
+    "if not os.path.exists(OBJAVERSE_PATH): os.makedirs(OBJAVERSE_PATH)\n",
+    "\n",
+    "def get_ids_of_already_downloaded_objects(objaverse_path = OBJAVERSE_PATH, image_path = IMAGE_PATH):\n",
     "    ''' \n",
-    "    Objects are stored in form PATH/{gibberish}/{uid}.glb\n",
+    "    Objects from objaverse are stored in form PATH/{gibberish}/{uid}.glb\n",
+    "    Rendering (2d images) are stored in form PATH/{uid}/{light_params_camera_params}.png\n",
     "    '''\n",
-    "    downloaded_objects = {}\n",
-    "    for root, dirs, files in os.walk(path):\n",
+    "    downloaded_objects = set()\n",
+    "    for root, dirs, files in os.walk(OBJAVERSE_PATH):\n",
     "        for file in files:\n",
     "            if file.endswith(\".glb\"):\n",
     "                uid = file.split(\".\")[0]\n",
-    "                downloaded_objects[uid] = root + uid + \".glb\"\n",
+    "                downloaded_objects.add(uid)\n",
+    "\n",
+    "    for root, dirs, files in os.walk(IMAGE_PATH):\n",
+    "        for file in files:\n",
+    "            if file.endswith(\".png\"):\n",
+    "                uid = file.split(\"/\")[0]\n",
+    "                downloaded_objects.add(uid)\n",
     "\n",
     "    return downloaded_objects\n",
     "    \n",
@@ -46,12 +58,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def "
+    "import argparse\n",
+    "import json\n",
+    "import math\n",
+    "import os\n",
+    "import random\n",
+    "import sys\n",
+    "import time\n",
+    "import urllib.request\n",
+    "import uuid\n",
+    "from typing import Tuple\n",
+    "from mathutils import Vector, Matrix\n",
+    "import numpy as np\n",
+    "\n",
+    "import bpy\n",
+    "from mathutils import Vector\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
