--- a/exploring.ipynb
+++ b/exploring.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "\n",
     "PROCESSES = multiprocessing.cpu_count() - 2 # leave some cpus for other stuff to not kill the PC\n",
     "OBJAVERSE_PATH = \"/Users/szczekulskij/.objaverse/hf-objaverse-v1/glbs/\" # default path for where the objaverse objects are stored\n",
-    "IMAGE_PATH = '''/Users/szczekulskij/masters-work/spring '24/CSE-252D/2d-images/''' # default path for where the objaverse images are stored\n",
+    "IMAGE_PATH = '''/Users/szczekulskij/masters-work/spring '24/CSE-252D/objaverse-rendering/objaverse_data''' # default path for where the objaverse images are stored\n",
     "\n",
     "# if IMAGE_PATH or OBJAVERSE_PATH is not found, it will be created\n",
     "if not os.path.exists(IMAGE_PATH): os.makedirs(IMAGE_PATH)\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
