finish updating the pipeline

--- a/exploring.ipynb
+++ b/exploring.ipynb
@@ -2,6 +2,90 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import objaverse\n",
+    "import random\n",
+    "uids = objaverse.load_uids()\n",
+    "# print(len(uids)) == 798759\n",
+    "annotations = objaverse.load_annotations(uids[:508759])\n",
+    "\n",
+    "'''\n",
+    "Annotation in form :\n",
+    "{uid: {\n",
+    "    'uri' : '',\n",
+    "    'tags' : [{'name' : '',}, {'name' : '',}, {'name' : '',}]\n",
+    "}}\n",
+    "'''\n",
+    "# get me count of all categories (eg. names) in the annotations\n",
+    "from collections import defaultdict\n",
+    "categories = defaultdict(int)\n",
+    "\n",
+    "for uid, annotation in annotations.items():\n",
+    "    for tag in annotation['tags']:\n",
+    "        categories[tag['name']] += 1\n",
+    "\n",
+    "# sort the categories by count and print if category has more than 100 annotations\n",
+    "sorted_categories = sorted(categories.items(), key=lambda x: x[1], reverse=True)\n",
+    "# limit to categories with more than 100 annotations\n",
+    "sorted_categories = [cat for cat in sorted_categories if cat[1] > 100]\n",
+    "for cat in sorted_categories:\n",
+    "    print(cat)\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import objaverse\n",
+    "import random\n",
+    "\n",
+    "def get_categories_given_uid(uid):\n",
+    "    annotations = objaverse.load_annotations([uid])\n",
+    "    return [item['name'] for item in annotations[uid]['tags']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "\n",
+    "def download_3d_objects_from_objectverse(nr_objects, categories = []):\n",
+    "    '''\n",
+    "    saves to \"~/.objaverse/hf-objaverse-v1/glbs/\" path by default\n",
+    "    '''\n",
+    "    assert type(categories) == list, \"categories should be a list of strings\"\n",
+    "    uids = objaverse.load_uids()\n",
+    "    uids_to_download = []\n",
+    "    start_time = time.time()\n",
+    "    TIMEOUT = 5 * 60\n",
+    "    while len(uids_to_download) < nr_objects or time.time() - start_time > TIMEOUT:\n",
+    "        # get 10 uids and filter them out\n",
+    "        uids = random.sample(uids, 10)\n",
+    "        uids = [uid for uid in uids if set(categories).issubset(get_categories_given_uid(uid))]\n",
+    "        # filter uids that are already in uids_to_download\n",
+    "        uids = [uid for uid in uids if uid not in uids_to_download]\n",
+    "\n",
+    "\n",
+    "    objects = objaverse.load_objects(\n",
+    "        uids=uids_to_download,\n",
+    "        download_processes=4\n",
+    "    )\n",
+    "    return objects"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [],
